# PlantMap3D-Hardware

./: .gitattributes  .gitignore  KiCad.gitignore  README.md
Mono Camera System Hardware/: Oak-d CM4-POE Calibration Adapter Bracket - Mirror Print.data  Oak-d CM4-POE Calibration Adapter Bracket - Mirror Print.gcode  Oak-d CM4-POE Calibration Adapter Bracket.3MF  Oak-d CM4-POE Calibration Adapter Bracket.SLDPRT  Oak-d CM4-POE Calibration Adapter Bracket.idea  ~$Oak-d CM4-POE Calibration Adapter Bracket.SLDPRT
Multi-Camera System Hardware/: 10g switch hold down bracket.SLDPRT  10g switch hold down bracket.STEP  Alignment jig.SLDPRT  COMPOUND.SLDPRT  COMPOUND_2.SLDPRT  COMPOUND_3.SLDPRT  COMPOUND_4.SLDPRT  COMPOUND_5.SLDPRT  COMPOUND_6.SLDPRT  COMPOUND_7.SLDPRT  COMPOUND_8.SLDPRT  Enclosure Assem.SLDASM  Enclosure Box.SLDPRT  Heatsink 165AS.SLDPRT  Heatsink 266AS.SLDPRT  Lower Switch Mount.SLDPRT  Lower Switch Mount.STEP  Mounting plate.SLDPRT  PCB template.SLDPRT  README.md  SOLID.SLDPRT  SOLID_10.SLDPRT  SOLID_11.SLDPRT  SOLID_12.SLDPRT  SOLID_13.SLDPRT  SOLID_14.SLDPRT  SOLID_15.SLDPRT  SOLID_16.SLDPRT  SOLID_17.SLDPRT  SOLID_18.SLDPRT  SOLID_19.SLDPRT  SOLID_2.SLDPRT  SOLID_20.SLDPRT  SOLID_21.SLDPRT  SOLID_22.SLDPRT  SOLID_23.SLDPRT  SOLID_3.SLDPRT  SOLID_4.SLDPRT  SOLID_5.SLDPRT  SOLID_6.SLDPRT  (+10 more)
Part Manufacturing Files/: 10g switch hold down bracket.3MF  Alignment jig.3MF  Enclosure Drill Template.3MF  Heatsink 266AS.STEP  (+8 more)
System Management Board/Firmware/C_Files/default/: CMakeLists.txt
System Management Board/Firmware/C_Files/test_pins/: CMakeLists.txt
(+246 files in other folders)
